--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "discord.js": "^13.0.1"
   }
 }
