--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "discord.js": "^12.0"
+    "discord.js": "^13.0",
+    "dotenv": "^10.0.0"
   }
 }
