--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
+    "test:watch": "tsdx test --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
@@ -45,12 +46,14 @@
     }
   ],
   "devDependencies": {
+    "@lambocreeper/mock-discord.js": "^2.0.1",
     "@size-limit/preset-small-lib": "^5.0.2",
     "husky": "^7.0.1",
     "size-limit": "^5.0.2",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "jest": "^27.0.6"
   },
   "dependencies": {
     "discord.js": "^13.0",
