Add simple console

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">=10"
   },
   "scripts": {
+    "dev": "node-dev .",
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
@@ -18,7 +19,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "console": "ts-node --project ./console/tsconfig.json console"
   },
   "peerDependencies": {},
   "husky": {
@@ -48,12 +50,15 @@
   "devDependencies": {
     "@lambocreeper/mock-discord.js": "^2.0.1",
     "@size-limit/preset-small-lib": "^5.0.2",
+    "concurrently": "^6.2.1",
     "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "node-dev": "^7.0.0",
     "size-limit": "^5.0.2",
+    "ts-node": "^10.2.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.3.5",
-    "jest": "^27.0.6"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "discord.js": "^13.0",
