--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,4 +51,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms:
+            linux/arm/v7
+            # linux/amd64
+            # linux/arm64 # https://github.com/docker/build-push-action/issues/471#issuecomment-928456949
+            # linux/arm/v7 # Raspberry Pi
